<resources>
    <string name="app_name">Final Project</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icon_person">icon person</string>
    <string name="icon_school">icon school</string>
    <string name="school">School</string>
    <string name="friends_school">Friends School</string>
    <string name="icon_bio">icon bio</string>
    <string name="name">Name</string>
    <string name="detail">Detail</string>
    <string name="bio">Bio</string>
    <string name="button_add">button add</string>
    <string name="button_back">button back</string>
    <string name="button_delete">button delete</string>
    <string name="button_edit">button edit</string>
    <string name="friends_bio">Friends Bio</string>
    <string name="friends_name">Friends Name</string>
    <string name="photo_friend">photo friend</string>
    <string name="add_friend">Add Friend</string>
    <string name="friend_name">Friend name</string>
    <string name="friend_school">Friend School</string>
    <string name="friend_bio">Friend Bio</string>
    <string name="op">Let\'s be friend</string>
    <string name="des">Kelas Industri not only develop hard skills and soft skills, but we also helpd develop life skills according to your competence.</string>
    <string name="start">Let\'s Start</string>
    <string name="friendname">Friend Name</string>
    <string name="schooll">School</string>
    <string name="button_save">button_save</string>
    <string name="edit_friend">Edit Friend</string>
    <string name="detail_friend">Detail Friend</string>
    <string name="search">Search</string>
    <string name="not_found_ic">Not_Found_ic</string>
    <string name="friend_not_found">Friend Not Found</string>
    <string name="image_profile">image profile</string>
    <string name="page_welcome">page welcome</string>
    <string name="button_camera">button camera</string>
    <string name="input_friend_bio">Input Friend Bio</string>
    <string name="input_friend_school">Input Friend School</string>
    <string name="input_friend_name">Input Friend Name</string>
    <string name="image_view_not_found">Image View Not Found</string>
    <string name="input_friend_phone_number">Input Friend Phone Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="my_friends">My Friends</string>
    <string name="profile_picture">Profile picture</string>
    <string name="filter_products">Filter Products</string>
    <string name="tops">Tops</string>
    <string name="vehicle">Vehicle</string>
    <string name="laptops">Laptops</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="simpan">Simpan</string>
    <string name="sorting_products">Sorting Products</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="order_products">Order Products</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="image">Image</string>
    <string name="login">Login</string>
    <string name="login_with_biometric">Login with Biometric</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="use_your_registered_account_information">Use your registered account information</string>
    <string name="image_login">Image login</string>
    <string name="logout">Logout</string>
    <string name="token">Token:</string>
    <string name="enable_biometric_login">Enable Biometric Login</string>
    <string name="setting">Setting</string>
    <string name="night_mode_switch">Night Mode Switch</string>
    <string name="maps_view">Maps View</string>
    <string name="status">Status</string>
    <string name="target_pin">Target Pin</string>
    <string name="location">Location</string>
    <string name="address">Address</string>
    <string name="lbl_permission_notification">lbl_permission_notification</string>
    <string name="lbl_setting">lbl_setting</string>
    <string name="show_notification">Show Notification</string>
    <string name="request_notification">Request Notification</string>
    <string name="_0">0</string>
    <string name="show_in_app_notification">Show In App Notification</string>
</resources>