<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sorting_products"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <RadioGroup
        android:id="@+id/sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <RadioButton
            android:id="@+id/sort_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            tools:ignore="VisualLintButtonSize" />

        <RadioButton
            android:id="@+id/sort_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            tools:ignore="VisualLintButtonSize" />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_products"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <RadioGroup
        android:id="@+id/order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <RadioButton
            android:id="@+id/order_asc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ascending"
            tools:ignore="VisualLintButtonSize" />

        <RadioButton
            android:id="@+id/order_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descending"
            tools:ignore="VisualLintButtonSize" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_simpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@android:color/holo_purple"
        android:text="@string/simpan"
        android:textColor="@color/white"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

</LinearLayout>