<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_products"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <RadioGroup
        android:id="@+id/filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <RadioButton
            android:id="@+id/filter_tops"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tops"
            tools:ignore="VisualLintButtonSize" />

        <RadioButton
            android:id="@+id/filter_vehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vehicle"
            tools:ignore="VisualLintButtonSize" />

        <RadioButton
            android:id="@+id/filter_laptops"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/laptops"
            tools:ignore="VisualLintButtonSize" />

        <RadioButton
            android:id="@+id/filter_motorcycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/motorcycle"
            tools:ignore="VisualLintButtonSize" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_simpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@android:color/holo_purple"
        android:text="@string/simpan"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />


</LinearLayout>