<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.WelcomeActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_400sdp"
        android:src="@drawable/welcome"
        android:contentDescription="@string/page_welcome" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textSize="@dimen/_30ssp"
        android:layout_margin="@dimen/_12sdp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:text="@string/des"
        tools:ignore="VisualLintLongText" />

    <Button
        android:id="@+id/btn_Start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:text="@string/start"
        tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />
</LinearLayout>