<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="VisualLintBounds">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_back"
                style="@style/AppButtonMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:background="@color/white"
                android:contentDescription="@string/button_back"
                android:src="@drawable/ic_back"
                tools:ignore="RedundantDescriptionCheck,TouchTargetSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/detail_friend"
                android:textSize="23sp"/>

            <ImageButton
                android:id="@+id/btn_edit"
                style="@style/AppButtonMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_100sdp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/button_edit"
                android:src="@drawable/ic_edit"
                tools:ignore="TouchTargetSizeCheck,RedundantDescriptionCheck" />

            <ImageButton
                android:id="@+id/btn_delete"
                style="@style/AppButtonMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:contentDescription="@string/button_delete"
                android:src="@drawable/ic_delete"
                tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck,TouchTargetSizeCheck" />
        </LinearLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_295sdp"
                android:contentDescription="@string/photo_friend"
                android:src="@drawable/profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="ImageContrastCheck,VisualLintBounds" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Name -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="16dp"
                app:boxBackgroundMode="none"
                tools:ignore="VisualLintBounds">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="8dp"
                    tools:ignore="VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>


            <!-- School -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:boxBackgroundMode="none"
                tools:ignore="VisualLintBounds">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_school"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/school"
                    android:drawableStart="@drawable/ic_school"
                    android:drawablePadding="8dp"
                    tools:ignore="VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>


            <!-- Bio -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:boxBackgroundMode="none"
                tools:ignore="VisualLintBounds">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bio"
                    android:drawableStart="@drawable/ic_info"
                    android:drawablePadding="8dp"
                    tools:ignore="VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>



    </LinearLayout>

</layout>   
