<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Toolbar">

                <ImageButton
                    android:id="@+id/btn_back"
                    style="@style/AppButtonMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_15sdp"
                    android:contentDescription="@string/button_back"
                    android:src="@drawable/ic_back"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck,RedundantDescriptionCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/edit_friend"
                    android:textSize="@dimen/_20ssp"
                    style="@style/SubTextTittle"/>

                <ImageButton
                    android:id="@+id/btn_save"
                    style="@style/AppButtonMenu"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_130sdp"
                    android:contentDescription="@string/button_save"
                    android:src="@drawable/ic_save"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_photo"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_295sdp"
                    android:contentDescription="@string/image_profile"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    tools:ignore="ImageContrastCheck" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btn_camera"
                    style="@style/btn_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_25sdp"
                    android:contentDescription="@string/button_camera"
                    android:src="@drawable/ic_camera"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                style="@style/bg_all">

                <!-- Name -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textfield_input">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_person"
                        style="@style/bg_textinput"
                        android:hint="@string/name"
                        tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- School -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textfield_input">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_school"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_school"
                        style="@style/bg_textinput"
                        android:hint="@string/school"
                        tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Bio -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textfield_input">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_bio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_info"
                        style="@style/bg_textinput"
                        android:hint="@string/bio"
                        tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Phone Number -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textfield_input">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_phonenumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_phonenumber"
                        style="@style/bg_textinput"
                        android:hint="@string/phone_number"
                        tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>
