<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.MapsActivity">

        <com.google.android.gms.maps.MapView
            android:id="@+id/map_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/maps_view"/>

        <ImageView
            android:id="@+id/iv_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/target_pin"
            android:src="@drawable/baseline_location"
            app:layout_constraintBottom_toBottomOf="@+id/map_view"
            app:layout_constraintEnd_toEndOf="@+id/map_view"
            app:layout_constraintStart_toStartOf="@+id/map_view"
            app:layout_constraintTop_toTopOf="@+id/map_view"
            app:tint="@color/text_red"
            tools:ignore="ImageContrastCheck" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_16sdp"
            android:layout_margin="@dimen/_24sdp"
            app:layout_constraintBottom_toBottomOf="@+id/map_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:padding="@dimen/_16sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible"
                android:padding="@dimen/_16sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/location"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:text="@string/address"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/address"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>