<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_125sdp"
        android:layout_height="@dimen/_175sdp"
        android:layout_margin="@dimen/_10sdp"
        android:focusable="true"
        app:cardCornerRadius="@dimen/_12sdp"
        android:foreground="?attr/selectableItemBackground"
        android:clickable="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            style="@style/card">

            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_125sdp"
                android:layout_gravity="center"
                android:contentDescription="@string/photo_friend"
                android:src="@drawable/profile"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="@dimen/_3sdp"
                android:text="@string/friendname"
                android:textStyle="bold"
                android:textSize="@dimen/_13ssp"
                style="@style/card"/>

            <TextView
                android:id="@+id/tv_school"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/schooll"
                android:textColor="@android:color/darker_gray"
                tools:ignore="TextContrastCheck"
                android:textSize="@dimen/_10ssp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>